--- a/kaart.html
+++ b/kaart.html
@@ -71,19 +71,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p>Trage wegen zijn dynamisch. Er komen trage wegen bij maar ze kunnen ook weer verdwijnen. Dankzij meer dan zestig vrijwilligers konden we alle trage wegen in Antwerpen op de kaart zetten. Deze kaart wordt op regelmatige tijdstippen aangevuld met nieuwe ontdekkingen.</p><p>Heb je zelf een opmerking, aanbeveling of knelpunt te melden? Dat kan nu ook online via de kaart of onderstaand formulier. </p><p>&gt; ONLINE Open de kaart in een nieuwe venster.&nbsp;</p><p><span style="font-size: 1.1rem;">Klik rechts boven op </span><strong>Kaart gereedschap</strong><span style="font-size: 1.1rem;">, vervolgens op </span><strong>Map gereedschap</strong><span style="font-size: 1.1rem;"> &gt;&nbsp;</span><strong>Editing&nbsp;</strong><span style="font-size: 1.1rem;">&gt; </span><strong>Draw</strong><span style="font-size: 1.1rem;">.</span></p><p>Indien de kaart niet wil laden, <a href="https://qgiscloud.com/tragewegen/opmaak_webkaart/?bl=mapnik&l=online%20bevraging!%2Cverzamelde%20adviezen!%2Cinventaris%20trage%20wegen%2Cdistrictgrens&t=opmaak_webkaart&e=473013%2C6651622%2C513293%2C6671074" class="text-primary" target="_blank">kan je ze hier bekijken</a>.</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p>Trage wegen zijn dynamisch. Er komen trage wegen bij maar ze kunnen ook weer verdwijnen. Dankzij meer dan zestig vrijwilligers konden we alle trage wegen in Antwerpen op de kaart zetten. Deze kaart wordt op regelmatige tijdstippen aangevuld met nieuwe ontdekkingen.</p><p>Heb je zelf een opmerking, aanbeveling of knelpunt te melden? Dat kan nu op de <strong>online kaart</strong>.</p><p>&gt; <a href="https://qgiscloud.com/tragewegen/opmaak_webkaart/?bl=mapnik&l=online%20bevraging%2Cverzamelde%20adviezen%2Cinventaris%20trage%20wegen%2Cdistrictgrens&t=opmaak_webkaart&e=474897%2C6648849%2C515177%2C6668301" class="text-primary" target="_blank">Open de kaart in een nieuwe venster</a>&nbsp;(door hier te klikken).</p><p><span style="font-size: 1.1rem;">Klik rechts boven op </span><strong>Kaart gereedschap</strong><span style="font-size: 1.1rem;">, vervolgens op </span><strong>Map gereedschap</strong><span style="font-size: 1.1rem;"> &gt;&nbsp;</span><strong>Editing&nbsp;</strong><span style="font-size: 1.1rem;">&gt; </span><strong>Draw</strong><span style="font-size: 1.1rem;">.</span></p></div>
         </div>
-    </div>
-</section>
-
-<section class="contacts4 cid-sbu4ZX9nwY" id="contacts4-3j">
-
-    
-
-    <div class="main_wrapper">
-        
-        <!--Map-->
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=iframe" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -212,7 +201,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">mobirise.com</a> easy web software</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Go now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
