--- a/ontdek.html
+++ b/ontdek.html
@@ -133,7 +133,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Singeltocht
                         </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Een tocht van 20 km door de stad binnen de ring. Neem de tram f trein naar één van de vertrekpunten en ga op pad.<br><br><a href="https://www.routeyou.com/nl-be/route/view/6402132/wandelroute/trage-wegen-antwerpen-singelroute" class="text-primary" target="_blank">routeyou</a><br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Een tocht van 20 km door de stad binnen de ring. Neem de tram of trein naar één van de vertrekpunten en ga op pad.<br><br><a href="https://www.routeyou.com/nl-be/route/view/6402132/wandelroute/trage-wegen-antwerpen-singelroute" class="text-primary" target="_blank">routeyou</a><br><br></p>
                     </div>
                 </div>
             </div>
@@ -470,7 +470,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise page builder - <a href="https://mobirise.site/p" style="color:#aaa;">Read more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website was <a href="https://mobirise.site/g" style="color:#aaa;">designed</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
