--- a/meldingen.html
+++ b/meldingen.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="card-box">
                     
-                    <p class="mbr-text mbr-fonts-style display-7"><a href="https://qgiscloud.com/tragewegen/antw_participatie/?bl=&l=advies%2Ctrageweg_nieuw%2Cverzamelde%20adviezen%2Ctrage_wegen_inventaris%2Conderlegger&t=antw_participatie&e=484156%2C6653242%2C504476%2C6663159" class="text-primary" target="_blank">Open de online kaart</a><br><a href="https://qgiscloud.com/tragewegen/antw_participatie/?bl=&l=advies%2Ctrageweg_nieuw%2Cverzamelde%20adviezen%2Ctrage_wegen_inventaris%2Conderlegger&t=antw_participatie&e=484156%2C6653242%2C504476%2C6663159" class="text-primary" target="_blank">e</a>n lees onderstaande instructies.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">o<a href="https://qgiscloud.com/tragewegen/antw_participatie/?bl=&l=advies%2Ctrageweg_nieuw%2Cverzamelde%20adviezen%2Ctrage_wegen_inventaris%2Conderlegger&t=antw_participatie&e=484156%2C6653242%2C504476%2C6663159" class="text-primary" target="_blank">pen de online kaart</a><br><a href="https://qgiscloud.com/tragewegen/antw_participatie/?bl=&l=advies%2Ctrageweg_nieuw%2Cverzamelde%20adviezen%2Ctrage_wegen_inventaris%2Conderlegger&t=antw_participatie&e=484156%2C6653242%2C504476%2C6663159" class="text-primary" target="_blank">e</a>n lees onderstaande instructies</p>
                 </div>
             </div>
 
@@ -106,8 +106,8 @@
                 </div>
                 <div class="card-box">
                     
-                    <p class="mbr-text mbr-fonts-style display-7"><a href="https://drive.google.com/file/d/1JspftjarfNlzlOqj-jt40K3cccomRRTR/view" class="text-primary" target="_blank">Download een handig overzicht 
-</a><br><a href="https://drive.google.com/file/d/1JspftjarfNlzlOqj-jt40K3cccomRRTR/view" class="text-primary" target="_blank">van de mogelijke adviezen.</a></p>
+                    <p class="mbr-text mbr-fonts-style display-7">d<a href="https://drive.google.com/file/d/1JspftjarfNlzlOqj-jt40K3cccomRRTR/view" class="text-primary" target="_blank">ownload een handig overzicht 
+</a><br><a href="https://drive.google.com/file/d/1JspftjarfNlzlOqj-jt40K3cccomRRTR/view" class="text-primary" target="_blank">van de mogelijke adviezen</a></p>
                 </div>
             </div>
 
@@ -270,7 +270,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Made with Mobirise</a> site maker</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">More info</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
