--- a/doemee.html
+++ b/doemee.html
@@ -104,72 +104,72 @@
         
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXktvo=/" target="_blank"><img class="w-100" src="assets/images/2018-1-510x497.png" alt="" data-slide-to="0" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXktvo=/" target="_blank"><img class="w-100" src="assets/images/2018-1-510x497.png" alt="https://miro.com/app/board/o9J_laXktvo=/" data-slide-to="0" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Antwerpen 2018</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXktvo=/" class="text-primary" target="_blank">Antwerpen 2018</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXiSEI=/" target="_blank"><img class="w-100" src="assets/images/2020-495x448.png" alt="" data-slide-to="1" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXiSEI=/" target="_blank"><img class="w-100" src="assets/images/2020-495x448.png" alt="" data-slide-to="1" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Antwerpen 2020</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXiSEI=/" class="text-primary" target="_blank">Antwerpen 2020</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXp0Co=/" target="_blank"><img class="w-100" src="assets/images/2030-434x707.png" alt="" data-slide-to="2" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXp0Co=/" target="_blank"><img class="w-100" src="assets/images/2030-434x707.png" alt="" data-slide-to="2" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Antwerpen 2030</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXp0Co=/" class="text-primary" target="_blank">Antwerpen 2030</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXr9is=/" target="_blank"><img class="w-100" src="assets/images/2100-510x352.png" alt="" data-slide-to="3" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXr9is=/" target="_blank"><img class="w-100" src="assets/images/2100-510x352.png" alt="" data-slide-to="3" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Deurne</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXr9is=/" class="text-primary" target="_blank">Deurne</a></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXv0Mo=/" target="_blank"><img class="w-100" src="assets/images/2140-1-772x834.png" alt="" data-slide-to="4" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXv0Mo=/" target="_blank"><img class="w-100" src="assets/images/2140-1-772x834.png" alt="" data-slide-to="4" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Borgerhout</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXv0Mo=/" class="text-primary" target="_blank">Borgerhout</a></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laX2Nok=/" target="_blank"><img class="w-100" src="assets/images/2180-1-699x620.png" alt="" data-slide-to="5" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laX2Nok=/" target="_blank"><img class="w-100" src="assets/images/2180-1-699x620.png" alt="" data-slide-to="5" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Ekeren</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laX2Nok=/" class="text-primary" target="_blank">Ekeren</a></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#skt6cVDVKz-modal">
-                    <a href="https://miro.com/app/board/o9J_laXiThc=/" target="_blank"><img class="w-100" src="assets/images/2600-2-556x776.png" alt="" data-slide-to="6" data-target="#lb-skt6cVDVKz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-target="#sktlJVTj63-modal">
+                    <a href="https://miro.com/app/board/o9J_laXiThc=/" target="_blank"><img class="w-100" src="assets/images/2600-2-556x776.png" alt="" data-slide-to="6" data-target="#lb-sktlJVTj63"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Berchem</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://miro.com/app/board/o9J_laXiThc=/" class="text-primary" target="_blank">Berchem</a></h6>
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="skt6cVDVKz-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sktlJVTj63-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-skt6cVDVKz" data-interval="5000">
+                        <div class="carousel slide" id="lb-sktlJVTj63" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/2018-1-510x497.png" alt="">
@@ -191,18 +191,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-skt6cVDVKz"></li>
-                                <li data-slide-to="1" data-target="#lb-skt6cVDVKz"></li>
-                                <li data-slide-to="2" data-target="#lb-skt6cVDVKz"></li>
-                                <li data-slide-to="3" data-target="#lb-skt6cVDVKz"></li><li data-slide-to="4" data-target="#lb-skt6cVDVKz"></li><li data-slide-to="5" data-target="#lb-skt6cVDVKz"></li><li data-slide-to="6" data-target="#lb-skt6cVDVKz"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sktlJVTj63"></li>
+                                <li data-slide-to="1" data-target="#lb-sktlJVTj63"></li>
+                                <li data-slide-to="2" data-target="#lb-sktlJVTj63"></li>
+                                <li data-slide-to="3" data-target="#lb-sktlJVTj63"></li><li data-slide-to="4" data-target="#lb-sktlJVTj63"></li><li data-slide-to="5" data-target="#lb-sktlJVTj63"></li><li data-slide-to="6" data-target="#lb-sktlJVTj63"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-skt6cVDVKz">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sktlJVTj63">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Vorige</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-skt6cVDVKz">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sktlJVTj63">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Volgende</span>
                             </a>
@@ -375,7 +375,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> website template</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page was <a href="https://mobirise.site/g" style="color:#aaa;">built</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
